--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,16 +9,12 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        php: [7.4, 8.0, 8.1]
+        php: [8.0, 8.1]
         laravel: [9.*, 10.*]
         stability: [prefer-stable]
         exclude:
-          -   php: 7.4
-              laravel: 10.*
           -   php: 8.0
               laravel: 10.*
-          -   php: 7.4
-              laravel: 9.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
