--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": ">=8.0",
         "illuminate/validation": "^9.0|^10.1"
     },
     "require-dev": {
