--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,12 +9,12 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        php: [8.0, 8.1]
-        laravel: [9.*, 10.*]
+        php: [8.1]
+        laravel: [10.*]
         stability: [prefer-stable]
-        exclude:
-          -   php: 8.0
-              laravel: 10.*
+#        exclude:
+#          -   php: 8.0
+#              laravel: 10.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
