--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         }
     ],
     "require": {
-        "php": ">=8.0",
-        "illuminate/validation": "^9.0|^10.1"
+        "php": "^8.1",
+        "illuminate/validation": "^10.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.14",
